--- a/website.html
+++ b/website.html
@@ -1,11 +1,45 @@
+<style>
+    button{
+    background-color: red;
+    }
+</style>
 <p>
-    This is my first time using css
+    This is my first time using HTML
 </p>
 
 <button>
     Hello
 </button>
 
+<button>
+    Click
+</button>
+
+<button>
+    Nikunj
+</button>
+
+<button>
+    Football
+</button>
+
+<p>
+    Hello World!
+</p>
+
+<p>
+    I am stating to learn HTML using super simple dev.
+</p>
 <a href = "https://youtube.com/" target = "_blank">
     Link to YouTube
+</a>
+<br>
+<br>
+<a href = "https://www.google.co.in/" target = "_blank">
+    Click here to visit google
+</a>
+<br>
+<br>
+<a href = "https://www.amazon.in/" target = "_blank">
+    Click here to visit amazon
 </a>
