--- a/buttonPractice.html
+++ b/buttonPractice.html
@@ -3,11 +3,14 @@
     {
         background-color: black;
         color: white;
-        font-size: 14px;
-        height: 40px;
-        width: 140px;
+        border: none;
+        padding-top: 9px;
+        padding-bottom: 9px;
+        padding-right: 16px;
+        padding-left: 16px;
         cursor: pointer;
         margin-right: 10px;
+        vertical-align: top;
     }
 
     .amazon
@@ -17,8 +20,10 @@
         color: black;
         font-weight: bold;
         font-size: 13px;
-        height: 40px;
-        width: 190px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        padding-left: 16px;
+        padding-right: 16px;
         border-radius: 20px;
         cursor: pointer;
         margin-right: 10px;
@@ -29,8 +34,10 @@
         background-color: rgb(46, 164, 79);
         color: white;
         border: none;
-        height: 40px;
-        width: 120px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        padding-left: 16px;
+        padding-right: 16px;
         border-radius: 6px;
         cursor: pointer;
         font-weight: bold;
@@ -42,8 +49,10 @@
         border: none;
         color: white;
         border-radius: 3px;
-        height: 40px;
-        width: 120px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        padding-left: 16px;
+        padding-right: 16px;
         margin-top: 10px;
         cursor: pointer;
         font-weight: bold;
@@ -57,8 +66,10 @@
         color: rgb(108, 117, 125);
         border-radius: 2px;
         border-width: 1px;
-        height: 40px;
-        width: 120px;
+        padding-top: 9px;
+        padding-bottom: 9px;
+        padding-left: 16px;
+        padding-right: 16px;
         font-weight: bold;
         font-size: 13px;
         cursor: pointer;
@@ -72,8 +83,10 @@
         background-color: rgb(10, 102, 194);
         color: white;
         border: none;
-        height: 40px;
-        width: 210px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        padding-left: 16px;
+        padding-right: 16px;
         font-width: bold;
         font-size: 15px;
         border-radius: 20px;
@@ -87,8 +100,10 @@
         background-color: white;
         color: rgb(10, 102, 194);
         border-color: rgb(10, 102, 194);
-        height: 40px;
-        width: 110px;
+        padding-top: 8px;
+        padding-bottom: 8px;
+        padding-left: 16px;
+        padding-right: 16px;
         font-size: 20px;
         font-width: bold;
         border-radius: 20px;
