--- a/buttons.html
+++ b/buttons.html
@@ -1,40 +1,48 @@
 <style>
     .subscribe-button
     {
-        background-color: rgb(200, 0, 0);
+        background-color: rgb(204, 0, 0);
         color: white;
         border: none;
-        height: 40px;
-        width: 105px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        padding-right: 16px;
+        padding-left: 16px;
         border-radius: 2px;
         cursor: pointer;
         margin-right: 8px;
+        vertical-align: top;
     }
 
     .join-button
     {
         background-color: white;
-        border-color: rgb(41, 118, 211);
+        border-color: rgb(6, 95, 212);
         border-style: solid;
         border-width: 1px;
-        color: rgb(41, 118, 211);
-        height: 40px;
-        width: 62px;
+        color: rgb(6, 95, 212);
+        padding-top: 9px;
+        padding-bottom: 9px;
+        padding-right: 16px;
+        padding-left: 16px;
         border-radius: 2px;
         cursor: pointer;
     }
     .tweet-button
     {
-        background-color: rgb(2, 158, 255);
+        background-color: rgb(29, 155, 240);
         color: white;
         border: none;
-        height: 40px;
-        width: 74px;
         border-radius: 20px;
         cursor: pointer;
         margin-left: 8px;
         font-weight: bold;
         font-size: 15px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        padding-right: 16px;
+        padding-left: 16px;
+        vertical-align: top;
     }
 </style>
 <button class = "subscribe-button"> <!-- this is a label which is used to name a button-->
