--- a/Amazon/amazon.html
+++ b/Amazon/amazon.html
@@ -1,65 +1,26 @@
-<style>
-    .Heading
-    {
-        color: black;
-        font-weight: bold;
-        font-size: 25px;
-    }
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Amazon.com Clone</title>
+        <link rel = "stylesheet" href = "amazonStyle.css">
+    </head>
+    <body>
+        <a href= "https://www.amazon.in/" target = "_blank">Back to Amazon</a>
+        <p class = "Heading">
+            Nike Black Running Shoes
+        </p>
 
-    .Secline
-    {
-        color: rgb(46, 164, 79);
-        font-size: 17px;
-        font-weight: bold;
-    }
+        <p class = "Secline">   $39 - in stock.
+        </p>
 
-    .thirdline
-    {
-        color: black;
-        font-size: 17px;
-    }
+        <p class = "thirdline">
+            Free delivery tomorrow.
+        </p>
 
-    .cart
-    {
-        background-color: rgb(255, 216, 20);
-        border: none;
-        color: black;
-        font-weight: bold;
-        font-size: 14px;
-        height: 40px;
-        width: 150px;
-        border-radius: 20px;
-        cursor: pointer;
-        margin-right: 10px;
-    }
+        <button class = "cart">Add to Cart</button>
+        <button class = "buy">Buy now</button>
+    </body>
+</html>
 
-    .buy
-    {
-        background-color: rgb(2550, 165, 0);
-        border: none;
-        color: black;
-        font-weight: bold;
-        font-size: 14px;
-        height: 40px;
-        width: 150px;
-        border-radius: 20px;
-        cursor: pointer;
-        margin-right: 10px;
-    }
-</style>
 
-<a href= "https://www.amazon.in/" target = "_blank">Back to Amazon</a>
-<p class = "Heading">
-    Nike Black Running Shoes
-</p>
 
-<p class = "Secline">
-    $39 - in stock.
-</p>
-
-<p class = "thirdline">
-    Free delivery tomorrow.
-</p>
-
-<button class = "cart">Add to Cart</button>
-<button class = "buy">Buy now</button>
