some files were required to be maintained in HTML structured format.

--- a/intro-to-html/imagePractice.html
+++ b/intro-to-html/imagePractice.html
@@ -2,30 +2,7 @@
 <html>
     <head>
         <title>Image Practice</title>
-        <style>
-            .roundedCorner
-            {
-                width: 200px;
-                border-radius: 20px;
-                margin-right: 40px;
-            }
-
-            .square
-            {
-                width: 150px;
-                height: 150px;
-                object-fit: contain;
-                object-position: center;
-                margin-right: 40px;
-
-            }
-
-            .circle
-            {
-                width: 200px;
-                border-radius: 200px;
-            }
-        </style>
+        <link rel = "stylesheet" href = "styles/imagePractice.css">
     </head>
     <body>
         <img class = "roundedCorner" src = "dog-image.jpg">
