--- a/intro-to-html/position.html
+++ b/intro-to-html/position.html
@@ -16,6 +16,7 @@
             left: 0;
             right: 0;
             height: 50px;
+            z-index: 1;
             ">Header</div>
 
             <div style="
@@ -26,7 +27,25 @@
                 bottom: 0;
                 top: 50px;
                 width: 72px;
-            ">Sidebar</div>
+            ">Sidebar
+                <div style="
+                position: absolute;
+                background-color: red;
+                color: white;
+                right: 0;
+                top: 0;
+                ">X
+            </div>
+            </div>
+
+            <div style="
+                position: absolute;
+                background-color: red;
+                color: white;
+                right: 10px;
+                top: 60px;
+                ">absolute
+            </div>
 
         <div style="
             background-color: lightblue;
@@ -38,6 +57,16 @@
             background-color: lightpink;
             height: 200px;
             width: 200px;
-        ">div2</div>
+            position: relative;
+        ">div2
+            <div style="
+            position: absolute;
+            background-color: black;
+            color: white;
+            bottom: 10px;
+            right: 10px;
+            ">5:00
+        </div>    
+    </div>
     </body>
 </html>
