--- a/javascript-course/Fundamentals/05-cart-quantity.html
+++ b/javascript-course/Fundamentals/05-cart-quantity.html
@@ -10,48 +10,67 @@
     ">Show Quantity</button>
 
     <button onclick="
-      cartQuantity++;
-      console.log('Cart Quantity: ' + cartQuantity);
+      if(cartQuantity + 1 > 10) alert('The cart is full');
+      else
+      {
+        cartQuantity++;
+        console.log('Cart Quantity: ' + cartQuantity);
+      }
+      
     ">Add to Cart</button>
 
     <button onclick="
-      cartQuantity += 2;
-      console.log(`Cart Quantity: ${cartQuantity}`);
+      if(cartQuantity + 2 > 10) alert('The cart is full');
+      else
+      {
+        cartQuantity += 2;
+        console.log(`Cart Quantity: ${cartQuantity}`);
+      }
     ">+2</button>
 
     <button onclick="
-      cartQuantity += 3;
-      console.log('Cart Quantity: ' + cartQuantity);
+      if(cartQuantity + 3 > 10) alert('The cart is full');
+      else
+      {
+        cartQuantity += 3;
+        console.log('Cart Quantity: ' + cartQuantity);
+      }
     ">+3</button>
 
     <button onclick="
-      cartQuantity -= 2;
-      if(cartQuantity < 0)
+      if(cartQuantity - 2 < 0) alert('Not enough items in the cart');
+      else
       {
-        cartQuantity = 0;
+        cartQuantity -= 2;
         console.log(`Cart Quantity: ${cartQuantity}`);
       }
-      console.log(`Cart Quantity: ${cartQuantity}`);
     ">-2</button>
 
     <button onclick="
-      cartQuantity -= 3;
-      if(cartQuantity < 0)
+      if(cartQuantity - 3 < 0) alert('Not enough items in the cart');
+      else
       {
-        cartQuantity = 0;
+        cartQuantity -= 3;
         console.log(`Cart Quantity: ${cartQuantity}`);
       }
-      console.log('Cart Quantity: ' + cartQuantity);
     ">-3</button>
 
     <button onclick="
-      cartQuantity += 4;
-      console.log('Cart Quantity: ' + cartQuantity);
+      if(cartQuantity + 4 > 10) alert('The cart is full');
+      else
+      {
+        cartQuantity += 4;
+        console.log('Cart Quantity: ' + cartQuantity);
+      }
     ">+4</button>
 
     <button onclick="
-      cartQuantity += 5;
-      console.log(`Cart Quantity: ${cartQuantity}`)
+      if(cartQuantity + 5 > 10) alert('The cart is full');
+      else
+      {
+        cartQuantity += 5;
+        console.log(`Cart Quantity: ${cartQuantity}`);
+      }
     ">+5</button>
 
     <button onclick="
