--- a/javascript-course/Fundamentals/11-arrays-and-loops.html
+++ b/javascript-course/Fundamentals/11-arrays-and-loops.html
@@ -45,6 +45,7 @@
       }
       */
 
+      /*
       const todoList = ['make dinner', 'wash dishes', 'watch youtube'];
 
       for(let index = 0; index < todoList.length; index++)
@@ -70,6 +71,53 @@
         numsDoubled.push(num*2);
       }
       console.log(numsDoubled);
+      */
+
+      const array1 = [1, 2, 3];
+      // const array2 = array1; // shallow copy
+      const array2 = array1.slice(); // deep copy
+      array2.push(4);
+      console.log(array1);
+      console.log(array2);
+
+      const [firstValue, secondValue] = [1, 2, 3];
+
+      for(let i = 1; i <= 10; i++)
+      {
+        if(i % 2 === 0) continue;
+        
+        console.log(i);
+
+        if(i === 8) break;     
+      }
+
+      let i = 1;
+      while(i <= 10)
+      {
+        if(i % 3 === 0)
+      {
+        i++;
+        continue; 
+      }
+        
+        console.log(i);
+        i++;
+      }
+
+      function doubleArray(nums)
+      {
+        const numsDoubled = [];
+
+        for(let i = 0; i < nums.length; i++)
+        {
+          const num = nums[i];
+          if(num === 0) return numsDoubled;
+          numsDoubled.push(num*2);
+        }
+        return numsDoubled
+      }
+      console.log(doubleArray([1, 1, 3]));
+      console.log(doubleArray([2, 2, 4, 0, 5]));
     </script>
   </body>
 </html>
