--- a/javascript-course/Fundamentals/11-arrays-and-loops.html
+++ b/javascript-course/Fundamentals/11-arrays-and-loops.html
@@ -114,7 +114,7 @@
           if(num === 0) return numsDoubled;
           numsDoubled.push(num*2);
         }
-        return numsDoubled
+        return numsDoubled;
       }
       console.log(doubleArray([1, 1, 3]));
       console.log(doubleArray([2, 2, 4, 0, 5]));
