--- a/javascript-course/Practice Exercises/12-r-rock-paper-scissors.html
+++ b/javascript-course/Practice Exercises/12-r-rock-paper-scissors.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Rock Paper Scissors</title>
-    <link rel="stylesheet" href="styles/12-rock-paper-scissors.css">
+    <link rel="stylesheet" href="styles/12-r-rock-paper-scissors.css">
   </head>
   <body>
     <p class="title">Rock Paper Scissors</p>
@@ -24,11 +24,12 @@
 
     <p class="js-score score"></p>
 
-    <button class="reset-score-button js-reset-score-button">Reset Score
-    </button>
+    <button class="reset-score-button js-reset-score-button">Reset Score</button>
 
     <button class="auto-play-button js-auto-play-button">Auto Play</button>
 
-    <script src="scripts/12-rock-paper-scissors.js"></script>
+    <p class="js-reset-confirmation reset-confirmation-button"></p>
+
+    <script src="scripts/12-r-rock-paper-scissors.js"></script>
   </body>
 </html>
