--- a/javascript-course/javascript-amazon-project/tracking.html
+++ b/javascript-course/javascript-amazon-project/tracking.html
@@ -88,5 +88,11 @@
         </div>
       </div>
     </div>
+
+    <script>
+      const url = new URL(window.location.href) // gets the url at the top of browser
+      console.log(url.searchParams.get('orderId')); // urlParam also called searchParams
+      console.log(url.searchParams.get('productId'));
+    </script>
   </body>
 </html>
