--- a/javascript-course/javascript-amazon-project/checkout.html
+++ b/javascript-course/javascript-amazon-project/checkout.html
@@ -49,6 +49,7 @@
         <div class="payment-summary js-payment-summary">
         </div>
       </div>
+      <div class="js-empty-cart"></div>
     </div>
 
     <script type="module" src="scripts/checkout.js"></script>
