Revised concepts of HTML and CSS.

--- a/html-css-course/Exercises/Lesson14positionPractice4.html
+++ b/html-css-course/Exercises/Lesson14positionPractice4.html
@@ -43,7 +43,8 @@
                             font-family: Arial;
                             margin-bottom: 12px;">This is a modal</div>
                         <button style="
-                            cursor: pointer;">Close</button>
+                            cursor: pointer;">Close
+                        </button>
                 </div>
         </div>
     </body>
