--- a/javascript-course/Fundamentals/05-variables.html
+++ b/javascript-course/Fundamentals/05-variables.html
@@ -27,7 +27,7 @@
         console.log(console1);
 
         variable1 = 5;
-        console.log("variable1: " + variable1);
+        console.log(`variable1: ${variable1}`);
 
         variable1 = variable1 + 1;
         console.log("variable1: " + variable1);
