--- a/html-css-course/Exercises/Lesson11grid.html
+++ b/html-css-course/Exercises/Lesson11grid.html
@@ -17,7 +17,7 @@
         <div style="
             margin-top: 30px;
             display: grid;
-            grid-template-columns: 100px 100px 200px;
+            grid-template-columns: 100px 100px 200px 70px;
         ">
         
             <div style="background-color: lightblue;">div 1</div> 
