--- a/html-css-course/Exercises/Lesson5textPractice1.html
+++ b/html-css-course/Exercises/Lesson5textPractice1.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>text Practice Exercise 1</title>
-        <link rel = "stylesheet" href = "styles/textPractice1.css"
+        <link rel = "stylesheet" href = "styles/textPractice1.css">
     </head>
     <body>
         <p class = "tahoma">
