--- a/javascript-course/Fundamentals/12-advanced-functions.html
+++ b/javascript-course/Fundamentals/12-advanced-functions.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Arrays and Loops</title>
+    <title>Advanced Functions</title>
   </head>
   <body>
 
