Started with JavaScript basics numbers, calculations, strings, interpolation, console, variable handling, if-else-if-else, and functions. Created a rock-paper-scissors game and a calculator using all these.

--- a/javascript-course/Fundamentals/04-website.html
+++ b/javascript-course/Fundamentals/04-website.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>HTML CSS Review</title>
-    <link rel="stylesheet" href="04-website.css">
+    <link rel="stylesheet" href="./styles/04-website.css">
   </head>
   <body>
     <!--This is a comment in html-->
@@ -12,7 +12,7 @@
     </button>
     <p>
       Paragraph of 
-      <button class="yellow-button">
+      <button class="yellow-button" title="tooltip">
         Hello!
       </button> Text
     </p>
