--- a/javascript-course/Practice Exercises/4.1-buttons.html
+++ b/javascript-course/Practice Exercises/4.1-buttons.html
@@ -16,7 +16,7 @@
 
     <p>
       Today I started JavaScript course  -by Simon 
-      <a target="black" href="https://www.youtube.com/@SuperSimpleDev" >
+      <a target="_blank" href="https://www.youtube.com/@SuperSimpleDev" >
         (@SuperSimple.dev)
       </a>
     </p>
