--- a/javascript-course/Practice Exercises/6.2-coin-flip-game.html
+++ b/javascript-course/Practice Exercises/6.2-coin-flip-game.html
@@ -8,6 +8,7 @@
 
       const guess = 'heads'; 
       const randomNumber = Math.random();
+      // console.log(randomNumber);
       const result = randomNumber < 0.5 ? 'heads' : 'tails';
 
       console.log(guess === result ? 'You win!' : 'You lose!');
