--- a/javascript-course/Fundamentals/06-rock-paper-scissors.html
+++ b/javascript-course/Fundamentals/06-rock-paper-scissors.html
@@ -10,7 +10,7 @@
 
       let computerMove = '';
 
-      if(randomNumber >= 0 && randomNumber < 1 / 3)
+      if(randomNumber < 1 / 3)
       {
         computerMove = 'rock';
       }
@@ -89,7 +89,7 @@
       {
         computerMove = 'paper';
       }
-      else if(randomNumber >= 2 / 3 && randomNumber < 1)
+      else if(randomNumber >= 2 / 3)
       {
         computerMove = 'scissors';
       }
