--- a/javascript-course/Practice Exercises/7.2-Calculator.html
+++ b/javascript-course/Practice Exercises/7.2-Calculator.html
@@ -73,7 +73,7 @@
     <p>
       <button class="clear-button" onclick="
         calculation = '';
-        console.log('calculation');
+        console.log(calculation);
       ">Clear</button>
     </p>
 
