--- a/javascript-course/Fundamentals/09-dom-projects.html
+++ b/javascript-course/Fundamentals/09-dom-projects.html
@@ -5,10 +5,9 @@
   </head>
   <body>
     <p>YouTube Subscribe Button</p>
-    <button onclick="
-      subscribe();
-    " class="js-subscribe-button">
-        Subscribe
+    <button onclick="subscribe();" 
+      class="js-subscribe-button
+    ">Subscribe
     </button>
 
     <p>Amazon Shipping Calculator</p>
@@ -24,7 +23,7 @@
     <p class="js-total-cost"></p>
 
     <script>
-      String(25)
+      String(25);
       console.log('25' - 5); // Type Coversion or automatic type conversion
       console.log('25' + 5); // this will concatenate it
 
@@ -56,7 +55,8 @@
 
       function calculateTotal()
       {
-        const inputElement = document.querySelector('.js-cost-input');
+        const inputElement = document.querySelector('.js-cost-input'); // is an object.
+        // console.log(typeof inputElement);
         let cost = Number(inputElement.value);
         if(cost < 40)
         {
