--- a/javascript-course/Fundamentals/09-rock-paper-scissors.html
+++ b/javascript-course/Fundamentals/09-rock-paper-scissors.html
@@ -40,7 +40,7 @@
         ties: 0
        };
 
-       updateScoreElement();
+       updateScoreElement(); // after every reload this runs therefor we see win: 0, Losses: 0, Ties: 0.
 
        /*
        if(!score)
