--- a/javascript-course/Fundamentals/12-advanced-functions.html
+++ b/javascript-course/Fundamentals/12-advanced-functions.html
@@ -62,21 +62,21 @@
       */
 
       /*
-      setTimeout(function(){
+      setTimeout(function(){ // waits for 3 seconds and the gives output.
         console.log('timeout')
         console.log('timout2');
       }, 3000); // it's in milisec
 
       console.log('next line');
 
-      setInterval(function(){
+      setInterval(function(){ // repeating timer prints interval after every 3 sec.
         console.log('interval');
       }, 3000);
 
       console.log('next line2');
       */
 
-      /*
+      
       [
         'make dinner',
         'wash dishes',
@@ -106,14 +106,14 @@
       console.log(oneLine());
 
       const object2 = {
-        method: () => {  // arrow mehtod
+        method: () => {  // arrow method
 
         },
         method() {    // short hand method syntax
 
         }
       }
-      */
+      
 
       console.log([1, -3, 5].filter((value, index) => {
         /*
