--- a/javascript-course/Practice Exercises/11.5-arrays-and-loops.html
+++ b/javascript-course/Practice Exercises/11.5-arrays-and-loops.html
@@ -7,7 +7,7 @@
     <script>
       function removeEgg(food)
       {
-        let revFood = food.slice();
+        let revFood = food.slice(); // make a deep copy.
         revFood.reverse();
         const result = [];
         let eggsRemoved = 0;
