--- a/javascript-course/Practice Exercises/7.3-cart-quantity.html
+++ b/javascript-course/Practice Exercises/7.3-cart-quantity.html
@@ -64,6 +64,7 @@
             console.log(`Cart quantity: ${cartQuantity}`);
           }
       }
+      console.log(eval("2+4*6/6+2")); // just checking eval function
     </script>
   </body>
 </html>
