--- a/javascript-course/Practice Exercises/9.6-Calculator.html
+++ b/javascript-course/Practice Exercises/9.6-Calculator.html
@@ -49,7 +49,9 @@
       <button  onclick="
         updateCalculation('9');
       ">9</button>
-      <button class="sign" onclick="
+      <button class="sign" 
+        style="padding-top: 12px;"
+        onclick="
         updateCalculation(' * ');
       ">*</button>
     </p>
