--- a/javascript-course/Fundamentals/08-rock-paper-scissors.html
+++ b/javascript-course/Fundamentals/08-rock-paper-scissors.html
@@ -18,14 +18,14 @@
     ">Scissors</button>
 
     <button onclick="
-      score.wins = 0;
-      score.losses = 0;
+      score.wins = 0;   // need to do this because the score initialization runs only once when the page loads.
+      score.losses = 0; // but if we reset score and don't reload the page then we need to start from here only
       score.ties = 0;
-      localStorage.removeItem('score');  
+      localStorage.removeItem('score'); // need to do this if user doesn't play after reset so for next reload we need to start value from 0, 0, 0.
     ">Reset Score
     </button>
     <script>
-       // A variable declares here is a Global variable
+       // A variable declares here is a Global variable runs once only when the page first laods.
        let score = JSON.parse(localStorage.getItem('score')) || {
         wins: 0,
         losses: 0,
